2022-08-22 Albert Chu <chu11@llnl.gov>

	* ipmidetect: Remove legacy -o option, use -h or --hostname.

2022-01-25 Albert Chu <chu11@llnl.gov>

	* Remove legacy support for the /etc/freeipmi.conf,
	/etc/ipmidetect.conf, /etc/ipmidetectd.conf, and
	/etc/ipmi_monitoring_sensors.conf config files.

	* ipmi-oem: Remove legacy retrieval key 'product-name' from
	'get-system-info' command.  Users should use
	'platform-model-name'.

2022-01-19 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/libcommon/ipmi-md2.h,
	libfreeipmi/libcommon/ipmi-md2.c,
	libfreeipmi/libcommon/ipmi-md5.h,
	libfreeipmi/libcommon/ipmi-md5.c: Static compilation with
	libfreeipmi can lead to problems if other software has similarly
	named md2/md5 functions (such as md5_init()).  Prefix all macros
	and functions with 'ipmi_' as needed.  Update all callers
	accordingly.

2022-01-18 Fabrice Fontaine <fontaine.fabrice@gmail.com>

	* configure.ac: use pkg-config to find gcrypt

2022-01-04 Fabrice Fontaine <fontaine.fabrice@gmail.com>

	* configure.ac, libfreeipmi/driver/ipmi-kcs-driver.c: Check for
	inb and outb before using them.

2022-01-04 Fabien Wernli

	* doc/freeipmi-faq.texi: Add conserver setup information.

2021-11-01 Fabrice Fontaine <fontaine.fabrice@gmail.com>

	* libfreeipmi/driver/ipmi-sunbmc-driver.c: musl doesn't provide
	getmsg or putmsg even if stropts.h is available.  Do not compile
	respective sections if get/putmsg are not available.

2021-08-11 Robin Lee Powell <rlpowell@digitalkingdom.org>

	* libipmiconsole: Document getty/agetty issue with serial
	keepalive

2021-05-28 Albert Chu <chu11@llnl.gov>

	* configure.ac: Support --with-systemconfigdir option.

2021-05-29 Heather Lemon <heather.lemon@canonical.com>

	* libfreeipmi/sensor-read/ipmi-sensor-read.c: (LP#1926299)
	Incorrect sensor reading reported.
	BMC's that use a non-zero 'LUN' number (00b-10b)
	will display an incorrect sensor temperature reading unless
	otherwise specified via the ipmiV2.0 spec and must be accessed via LUN 00b.